# ml-experiment-triage-env

./: .dockerignore  .gitignore  Dockerfile  QUICKREF.md  README.md  inference.py  main.py  models.py  openenv.yaml  pyproject.toml
app/: __init__.py  data.py  env.py  main.py  models.py  tasks.py
app/templates/: index.html
docs/: Makefile  README.md  architecture.bak0  architecture.fdb_latexmk  architecture.fls  architecture.tex  bibliography.bib  diagrams.md  main.aux  main.bak0  main.bak1  main.bak10  main.bak11  main.bak2  main.bak3  main.bak4  main.bak5  main.bak6  main.bak7  main.bak8  main.bak9  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
envs/ml_triage_env/: client.py  models.py  openenv.yaml  pyproject.toml
envs/ml_triage_env/server/: Dockerfile  app.py  ml_triage_environment.py  openenv.yaml
server/: app.py  ml_triage_environment.py
