[project]
name = "ml-experiment-triage-env"
version = "1.0.0"
description = "An OpenEnv-compliant RL environment for ML experiment triage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "openai>=2.30.0",
    "openenv-core>=0.2.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.42.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.10",
    "requests>=2.32.0",
]

[project.scripts]
ml-triage-server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
